src/app/features/tasks/task/task.component.scss
@import '../../../../variables';
@import '~angular-material-css-vars/public-util';
@import './task.component.mixins';


// TASK BOX STYLES
// ---------------
// NOTE: needs to come first to be overwritten by :host.isCurrent
// NOTE: needs to be very light, because we're on a lighter background for the dark theme
:host-context(.isDarkTheme) {
  color: $dark-theme-text-color-most-intense;
}

:host {
  display: block;
  position: relative;

  color: $light-theme-text-color;

  &.isSelected {
    z-index: $z-is-selected-host;
    //position: sticky;
    //top: 16px;
  }

  &.isCurrent {
    z-index: $z-is-current-host;
    position: sticky;
    top: $s;
  }

  &:focus {
    z-index: $z-focus-host;
    outline: none;
  }
}


.inner-wrapper {
  position: relative;
  padding: $task-inner-padding-top-bottom 0;
  margin-bottom: 0;

  :host.isAdditionalInfoOpen > & {
    margin-top: $s*2;
    margin-bottom: $s*2;
    box-shadow: $whiteframe-shadow-1dp;
    border-top-width: 1px;
  }
}

.box {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  transition: $transition-standard;
  transition-property: transform, box-shadow;
  border: 1px solid $task-c-border-light;
  border-top-width: 0;

  :host.gu-mirror & {
    box-shadow: $whiteframe-shadow-8dp !important;
  }

  @include lightTheme {
    background: $task-c-bg-light;
    border-color: $task-c-border-light;
  }

  @include darkTheme {
    background: $task-c-bg-dark;
    border-color: $task-c-border-dark;
  }

  // NOTE: also applies to child tasks
  :host-context(.isLightTheme).isSelected & {
    background: $task-c-selected-bg-light;
  }
  :host-context(.isDarkTheme).isSelected & {
    background: $task-c-selected-bg-dark;
  }

  .inner-wrapper.isSelected > & {
    //border-top-width: 1px;
    transition: $transition-enter;
    transition-property: left, right, box-shadow;
    box-shadow: $whiteframe-shadow-1dp;

    @include lightTheme() {
      background: $light-theme-bg-darker;
      border-color: $task-c-selected-border-light;
    }
    @include darkTheme() {
      background: $task-c-selected-bg-dark;
      border-color: $task-c-selected-border-dark;
    }

    @include mq(xs) {
      transform-origin: left;
      right: -34px;
      left: -1 * $task-border-radius;
      border-top-left-radius: $task-border-radius;
      border-bottom-left-radius: $task-border-radius;
    }
  }

  @include isHostFocus('.inner-wrapper') {
    border-radius: $task-border-radius;

    @include mq(xs) {
      // NOTE: somehow ng build messes up, if we don't include it like that
      border-color: $task-c-focus;
      border-width: 1px;
      border-style: dashed !important;
    }
  }

  :host.isCurrent.isCurrent.isCurrent.isCurrent.isCurrent & {
    border-color: $task-c-current !important;
    border-width: 2px !important;
    border-bottom-color: $task-c-current !important;
    border-top-color: $task-c-current !important;
    border-left-color: $task-c-current !important;
    border-right-color: $task-c-current !important;
  }

  @include isCurrent {
    box-shadow: $task-active-shadow;
    border-radius: 12px !important;
    bottom: -2px;
    top: -2px;
    @include mq(xs) {
      transform: scale($task-current-task-zoom);
    }
  }


  :host:first-child > .inner-wrapper > & {
    border-top-left-radius: $task-border-radius;
    border-top-right-radius: $task-border-radius;
  }

  :host:last-child > .inner-wrapper > & {
    border-bottom-left-radius: $task-border-radius;
    border-bottom-right-radius: $task-border-radius;
  }

  // NOTE: there are also styles in the task list component, because of host not being usable
  // with the adjacent child selector
  :host:first-child > .inner-wrapper > &,
  :host.isAdditionalInfoOpen > .inner-wrapper > & {
    border-top-width: 1px;
  }

  // because the shadow gets to intense otherwise
  :host.isAdditionalInfoOpen > .inner-wrapper > & {
    border-bottom-width: 0;
  }


  :host-context(.isLightTheme):last-child > .inner-wrapper > & {
    @include mq(xs, max) {
      border-bottom-color: $task-c-border-light;
    }
  }

  :host-context(.isDarkTheme):last-child > .inner-wrapper > & {
    @include mq(xs, max) {
      border-bottom-color: $task-c-border-dark;
    }
  }
}

.sub-tasks {
  margin: $s 0 $s $s*3;
  position: relative;

  @include smallMainContainer {
    margin: $s 0 $s $s*3;
    position: relative;
  }

  @include mq(xs) {
    //margin: $s $s*2 $s $s*3;
    margin: $s 0 $s $s*5;
  }
}


.first-line {
  position: relative;
  display: flex;
  align-items: stretch;
  flex-wrap: nowrap;
  user-select: none;
  justify-content: space-between;
  min-height: $task-first-line-min-height;
  touch-action: pan-y;

  @include mq(xs, max) {
    flex-wrap: wrap;
    justify-content: flex-end;
  }

  //@include smallMainContainer{
  //  flex-wrap: wrap;
  //  justify-content: flex-end;
  //}
}


.title-and-left-btns-wrapper {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
  min-height: 36px;
  flex-grow: 1;
  flex-basis: 70%;
  @include mq(xs, max) {
    //margin-bottom: 5px;
    //flex-shrink: 0;
    flex-basis: 50%;
  }

  @include isDoneForFirstLine {
    opacity: $task-is-done-dim-opacity;
  }
}

// CONTROLS
// --------
.all-controls-wrapper {
  display: flex;
  flex-flow: row;
  position: relative;
  margin-left: $s;
  margin-right: $s;
  align-items: stretch;

  @include verySmallMainContainer {
    flex-direction: column-reverse;
    align-items: flex-end;
    justify-content: center;
  }
}

.controls {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  text-align: right;
  margin-right: 2px;
  position: relative;

  button {
    margin-top: auto;
    margin-bottom: auto;
    //height: 100%;
  }

  @include mq(xs, max) {
    white-space: normal;
    margin-left: 5px;
  }

  @include smallMainContainer {
    white-space: normal;
    margin-left: 5px;
  }

  @include verySmallMainContainer {
    min-height: 40px;
  }
}
/* ... */

